Fixed mispelled word in education section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="line-break"></div>
             
                 <div class="card--work-history">
-                    <strong>🏫 Austin Community Colle | AS Computer Science</strong>
+                    <strong>🏫 Austin Community College | AS Computer Science</strong>
                     <p>08/2018 - 12/2020</p>
                 </div>
             </section>
