--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <div>
                     <h1 id="user-name">Dakari Antoine</h1>
-                    <p id="bio">I am a student at Texas State University majoring in computer science with a minor in applied nathematics</a>.</p>
+                    <p id="bio">I am currently attending Texas State University studying computer science and applied mathematics. I am interested in using my technical skills in the finance industry, particularly quantitative finance.</a>.</p>
                     <p id="email">👉 dakariantoine@gmail.com</p>
                 </div>  
             </section>
