Update resume file name in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="socials--list">
                     <a href="https://www.linkedin.com/in/dakari-antoine/" target="_blank">Linkedin</a>
                     <a href="https://github.com/karisheen" target="_blank">Github</a>
-                    <a href="./assets/resume.pdf" target="_blank">Download Resume</a>
+                    <a href="./assets/Dakari_Antoine_Resume.pdf" target="_blank">Download Resume</a>
                 </div>
             </section>
 
