Update technical skills in index.html

--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
                 <section class="section--page">
                     <h2>Technical Skills</h2>
                     <ul id="qualifications--list">
-                        <li>✔️ Languages: C, C++, Go, Kotlin, Python</li>
-                        <li>✔️ Libraries: MatPlotLib, NumPy, Pandas, Plotly</li>
-                        <li>✔️ Developer Tools: Android Studio, Atom, Bitbucket, Git, GitHub, Jupyter Notebook, Sublime, Terminal (Linux,
-                            MacOS) VS Code, Visual Studio</li>
+                        <li>✔️ Languages: C, C++, Go, Kotlin, Python, SQL</li>
+                        <li>✔️ Libraries: MatPlotLib, NumPy, Pandas, Plotly, Seaborn, Scikit-learn, Yfinance</li>
+                        <li>✔️ Developer Tools: Android Studio, Atom, Bitbucket, Git, GitHub, Jupyter Notebook, MySQL, Sublime, Terminal (Linux, MacOS), VS Code, Visual Studio</li>
                     </ul>
                 </section>  
 
