--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <div>
                     <h1 id="user-name">Dakari Antoine</h1>
-                    <p id="bio">I am graduated from Texas State University with a bachelor of science in computer science and a minor in applied mathematics. I am interested in using my technical skills in the finance industry, particularly quantitative finance</a>.</p>
+                    <p id="bio">I graduated from Texas State University with a bachelor of science in computer science and a minor in applied mathematics. I am interested in using my technical skills in the finance industry, particularly quantitative finance</a>.</p>
                     <p id="email">👉 dakariantoine@gmail.com</p>
                 </div>  
             </section>
