--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="socials--list">
                     <a href="https://www.linkedin.com/in/dakari-antoine/" target="_blank">Linkedin</a>
                     <a href="https://github.com/karisheen" target="_blank">Github</a>
-                    <a href="./assets/Dakari_Antoine_Resume.pdf" target="_blank">Download Resume</a>
+                    <a href="./assets/DakariAntoineResume(05_2025).pdf" target="_blank">Download Resume</a>
                 </div>
             </section>
 
@@ -55,9 +55,8 @@
                         <strong>🚧 Software Engineer Intern | Charles Schwab</strong>
                         <p>06/2021 - 08/2021</p>
                         <ul>
-                            <li>Implemented dark mode compatibility on the Android version of the Schwab Retirement App</li>
-                            <li>Updated codebase with components from a design system to make the Schwab Retirement App more visually
-                                pleasing</li>
+                            <li>Engineered and deployed dark mode compatibility for the Schwab Retirement App on Android, enhancing user experience and aligning with modern UI/UX standards.</li>
+                            <li>Enhanced the app’s user interface by integrating a corporate-standard design library, ensuring a consistent and visually engaging user experience across the platform.</li>
                             <li>Achieved first place in the business challenge summit after pitching to upper management on how Schwab can
                                 harness the power of existing social media platforms to educate, activate, and build confidence among beginner
                                 traders.</li>
