Add new project entries for Financial Management Portfolio System and Lung Cancer Likelihood Prediction System in index.html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                     <div class="card--project">
                         <a href="project2.html" ><span>🏆 </span>Black Scholes Model Option Pricer</a>
                     </div>
+
+                    <div class="card--project">
+                        <a href="project3.html" ><span>🏆 </span>Financial Management Portfolio System</a>
+                    </div>
+
+                    <div class="card--project">
+                        <a href="project4.html" ><span>🏆 </span>Lung Cancer Likelihood Prediction System</a>
+                    </div>
                 </section>
 
                 <section class="section--page">
