Revise technical skills section in index.html to include updated programming languages, operating systems, and libraries

--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                 <section class="section--page">
                     <h2>Technical Skills</h2>
                     <ul id="qualifications--list">
-                        <li>✔️ Languages: C, C++, Go, Kotlin, Python, SQL</li>
-                        <li>✔️ Libraries: MatPlotLib, NumPy, Pandas, Plotly, Seaborn, Scikit-learn, Yfinance</li>
-                        <li>✔️ Developer Tools: Android Studio, Atom, Bitbucket, Git, GitHub, Jupyter Notebook, MySQL, Sublime, Terminal (Linux, MacOS), VS Code, Visual Studio</li>
+                        <li>✔️ Languages: C, C++, Go, Java, Kotlin, MATLAB, PowerShell (basic), Python, SQL</li>
+                        <li>✔️ Operating Systems: Linux (Ubuntu), MacOS, Windows</li>
+                        <li>✔️ Developer Tools: Android Studio, Bitbucket, Git, GitHub, Jupyter Notebook, MySQL, Oracle Database, Sublime, VS Code</li>
+                        <li>✔️ Libraries: MatPlotLib, NumPy, Pandas, Plotly, PyTorch, Scikit-learn, Seaborn, Yfinance</li>
                     </ul>
                 </section>  
 
